# Pixelmochis

./: index.html
Assets/Animations/: Digimochi.controller  Digimochi_Cure.anim  Digimochi_Dance.anim  Digimochi_Feed.anim  Digimochi_Idle.anim  Digimochi_Pet.anim  Medicina.controller  MedicineAnimation.anim  SYNCButton.controller  SyncButtonAnimation.anim  Text (TMP).controller  WaitingTransactionTextanim.anim
Assets/Audio/: AudioMixer.mixer
Assets/Data/: DigimochiDataProxy 1.asset  DigimochiDataProxy 2.asset  DigimochiDataProxy.asset  DigimochiDataProxy_DiabloAzul.asset  DigimochiDataProxy_DiabloRojo.asset
Assets/Fonts/: PixelOperator SDF.asset  upheavtt SDF.asset
Assets/Prefabs/: Audio.prefab  Digimochi.prefab  InteractButton.prefab  NextButton.prefab  SyncCanvas(desuso).prefab  Web3.prefab
Assets/Scenes/: Game.unity  SampleScene.unity  SyncScene.unity
Assets/Script/: Async.cs  AudioPlayerSetter.cs  ButtonSoundPlayer.cs  CursorController.cs  DigimochiGlossary.cs  DigimochiManager.cs  DigimochiSelector.cs  DigimochiTypeGlossary.cs  EnviromentController.cs  HapinessBarController.cs  LightFalloffController.cs  LoadingTextEffect.cs  MuteButton.cs  OpenURL.cs  Panel.cs  PlayerActionController.cs  PlayerController.cs  ScaleAnimation.cs  SignIn.cs
Assets/Settings/: DefaultSpritePreset.preset  DefaultSpritePreset_Multiple.preset  (+1 more)
ProjectSettings/: EditorBuildSettings.asset  PresetManager.asset  ProjectSettings.asset
Solana/: Cargo.toml
Solana/digimochi_program/: Cargo.toml  rustfmt.toml
Solana/digimochi_program/src/: lib.rs
TemplateData/: style.css
(+63 files in other folders)
