[package]
name = "digimochi_program"
version = "0.1.0"
edition = "2021"

[lib]
name = "digimochi"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
mpl-token-metadata = "3.1.0"
solana-program = "1.16.13"
spl-associated-token-account = "2.2.0"
spl-token = "4.0.0"

[dev-dependencies]
solana-program-test = "1.6.10"
solana-sdk = "1.6.10"
